<resources>
    <string name="app_name">HPMBooksApp</string>
    <string name="welcome_view_message_string">Welcome Reader!</string>
    <string name="welcome_view_login_string">Login</string>
    <string name="welcome_view_register_string">Register</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_passwordcheck">Check Password</string>
    <string name="register_button_register">Register</string>
    <string name="auth_token">authToken</string>
    <string name="preference_file_key">auth_file</string>
    <string name="error_message">Something went wrong</string>
    <string name="fill_fields">Please fill this field!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="passwords_no_match">Passwords don\'t match</string>
    <string name="retry">Retry</string>
    <string name="add_book_title">Title</string>
    <string name="add_book_author">Author</string>
    <string name="add_book_publisher">Publisher</string>
    <string name="add_book_button">Add Book</string>
    <string name="ok">Ok</string>
    <string name="no_account">No account? Register Here!</string>
</resources>
