<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterActivity"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/register_username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/register_username_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/register_username_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/register_username_passwordcheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_passwordcheck"
        android:inputType="textPassword"
        android:layout_margin="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/register_button_register"
        android:onClick="registerNewUser"
        android:background="@drawable/button_shape"
        android:textColor="@android:color/white"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:elevation="12dp"/>

</LinearLayout>