<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome_view_message_string" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1"
        >

        <Button
            android:id="@+id/mainview_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:elevation="12dp"
            android:onClick="openLoginView"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/welcome_view_login_string"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/mainview_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:elevation="12dp"
            android:onClick="openRegisterView"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/welcome_view_register_string"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"
            android:layout_weight="0.5"/>

    </LinearLayout>




</RelativeLayout>