<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addBookViewModel"
            type="com.hpmtutorial.hpmbooksapp.viewmodel.AddBookActivityViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.AddBookActivity"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_book_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_book_title_edittext"
                android:text="@={addBookViewModel.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_book_title"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_book_author_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_book_author_edittext"
                android:text="@={addBookViewModel.author}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_book_author"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_book_publisher_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_book_publisher_edittext"
                android:text="@={addBookViewModel.publisher}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_book_publisher"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_shape"
            android:elevation="12dp"
            android:onClick="@{()->addBookViewModel.onAddBookClick()}"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/add_book_button"
            android:textColor="@android:color/white" />


    </LinearLayout>
</layout>