<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailsViewModel"
            type="com.hpmtutorial.hpmbooksapp.viewmodel.DetailsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.DetailsActivity"
        android:orientation="vertical"
        android:gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/details_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/details_title_edittext"
                android:text="@={detailsViewModel.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_book_title"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/details_author_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:passwordToggleEnabled="true"
            android:layout_below="@id/details_title_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/details_author_edittext"
                android:text="@={detailsViewModel.author}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_book_author"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/details_publisher_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:passwordToggleEnabled="true"
            android:layout_below="@id/details_author_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/details_publisher_edittext"
                android:text="@={detailsViewModel.publisher}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_book_publisher"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/book_overlay_view_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:animateLayoutChanges="true"
            android:background="#000000"
            android:visibility="gone"
            android:elevation="24dp"
            android:clickable="true"
            android:focusable="true">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>
    </RelativeLayout>
</layout>